continuous-integration/bootstrap/argo-workflows/argo-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      containers:
        - args:
            - server
            - --auth-mode=server
          name: argo-server
